信号相关测试学习

--- a/仿炉石传说.csproj
+++ b/仿炉石传说.csproj
@@ -14,4 +14,7 @@
     <ItemGroup>
         <PackageReference Include="Masuit.Tools.Core" Version="2024.7.4"/>
     </ItemGroup>
+    <ItemGroup>
+        <Folder Include="接口约定\信号\"/>
+    </ItemGroup>
 </Project>
